# level4-nlp-finalproject-hackathon-nlp-09-lv3

./: .gitignore  README.md  requirements.txt
.github/: pull_request_template.md
.github/DISCUSSION_TEMPLATE/: Meeting.yml
Finbuddy/: agent_tutorial.ipynb  agent_tutorial_yongari.ipynb  test.txt
Finbuddy/crews/: __init__.py  analysis_crew.py  blog_crew.py  context_crew.py  crew.py  crew_retrieval.py  crew_table_processing.py  image_crew.py  news_search_crew.py  summarizecrew.py  table_crew.py  visual.py  visualizecrew.py
Finbuddy/crews_yongari_news/: __init__.py
Finbuddy/tools/: __init__.py  bar_visualize.py  document_retrieval_tool.py  ducducsearch.py  execute_visualization_code_tool.py  generate_visualization_code_tool.py  graph_visualizer.py  image_processor.py  line_visualize.py  markdown_to_dataframe.py  markdown_to_df.py  register.py  table_analyzer.py
front/: package.json
front/app/: page.tsx
pdf_parsing/: pdf_parsing.ipynb
service/: README.md  agent_tutorial.ipynb  markdown_process_result.json  pyproject.toml
service/src/service/: crew.py  crew_temp.py  main.py
service/src/service/config/: agents.yaml  tasks.yaml
service/src/service/tools/: csv_visualization_agent.py  graph_visualizer.py  markdown_to_csv.py  markdown_to_dataframe.py
src/: README.md  Retrieval_tutorial.ipynb  main.py  make_validation_dataset.py  pipeline.ipynb  pipeline_for_service.ipynb  pracitce.ipynb  practice.ipynb  requirements.txt  sample.ipynb  sample_db.ipynb  sample_qa.ipynb  test.txt  test_qa.ipynb
src/DB/: Chromadb.py  chroma_db_sh.py  chromadb_storing.py
(+450 files in other folders)
