[project]
name = "service"
version = "0.1.0"
description = "service using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.98.0,<1.0.0"
]

[project.scripts]
service = "service.main:run"
run_crew = "service.main:run"
train = "service.main:train"
replay = "service.main:replay"
test = "service.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
